Improved application layout and refactored _exchange_box.coffe

--- a/app/assets/stylesheets/_exchange_box.scss
+++ b/app/assets/stylesheets/_exchange_box.scss
@@ -20,4 +20,16 @@
         }
       }
     }
+}
+
+.exchange_box{
+  .card{
+    .card-block{
+      .destination_currency{
+        .title{
+          display: inline-block;
+        }
+      }
+    }
   }
+}
